style(scanner): fix indentation in non-replay candle-loading for-loop
Body of for(TimeFrame tf : timeframesToLoad) in the else branch was
misaligned — content sat at the same column as the loop header.